--- a/index.html
+++ b/index.html
@@ -9,9 +9,19 @@
 </head>
 
 <body>
-	
-    <div id="main">
-        
+	<nav>
+		<div>
+			<ul class="box">
+				<li class="tab-one"><a href=''>Home</a></li>
+				<li class="tab-two"><a href=''>Recipes</a></li>
+				<li class="tab-three"><a href=''>Reviews</a></li>
+			</ul>
+		</div>
+	</nav>
+    <div id="main" class="box-vertical">
+        <div src="https://images.pexels.com/photos/1092730/pexels-photo-1092730.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" class="cover"></div>
+
+		<h1>ADVENTURES IN FOOD</h1>
     </div>
 
 	<script src="script.js"></script>
