Added search, login, and register to nav bar

--- a/index.html
+++ b/index.html
@@ -10,16 +10,21 @@
 
 <body>
 	<nav>
-		<div>
+		<div class="box nav-box">
 			<ul class="box">
 				<li class="tab-one"><a href=''>Home</a></li>
 				<li class="tab-two"><a href=''>Recipes</a></li>
 				<li class="tab-three"><a href=''>Reviews</a></li>
 			</ul>
+			<div class="box">
+				<input type="search" placeholder="search"/>
+				<a href="">Login</a>
+				<a href="">Register</a>
+			</div>
 		</div>
 	</nav>
     <div id="main" class="box-vertical">
-        <div src="https://images.pexels.com/photos/1092730/pexels-photo-1092730.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" class="cover"></div>
+        <div alt="Cover photo of hamburger and fries" class="cover"></div>
 
 		<h1>ADVENTURES IN FOOD</h1>
     </div>
