Added adventure thumbnails and reformatted

--- a/index.html
+++ b/index.html
@@ -23,10 +23,30 @@
 			</div>
 		</div>
 	</nav>
+	<div alt="Cover photo of hamburger and fries" class="cover"></div>
     <div id="main" class="box-vertical">
-        <div alt="Cover photo of hamburger and fries" class="cover"></div>
+        
 
 		<h1>ADVENTURES IN FOOD</h1>
+		<section id="newest-article" class="box-vertical"></section>
+		<section id="recent-adventures">
+			<h2 class="adventure-heading">Recent Adventures</h2>
+			<div class="box thumbnails">
+				<div class="article-thumbnail"></div>
+				<div class="article-thumbnail"></div>
+				<div class="article-thumbnail"></div>
+			</div>
+		</section>
+		<section id="popular-adventures">
+			<h2 class="adventure-heading">Popular Adventures</h2>
+			<div class="box thumbnails">
+				<div class="article-thumbnail"></div>
+				<div class="article-thumbnail"></div>
+				<div class="article-thumbnail"></div>
+				<div class="article-thumbnail"></div>
+
+			</div>
+		</section>
     </div>
 
 	<script src="script.js"></script>
