Formatted clickable items, added media queries for centering articles with narrower screen widths

--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
 	<nav>
 		<div class="box nav-box">
 			<ul class="box">
-				<li class="tab-one"><a href=''>Home</a></li>
-				<li class="tab-two"><a href=''>Recipes</a></li>
-				<li class="tab-three"><a href=''>Reviews</a></li>
+				<li class="tab-one clickable"><a href=''>Home</a></li>
+				<li class="tab-two clickable"><a href=''>Recipes</a></li>
+				<li class="tab-three clickable"><a href=''>Reviews</a></li>
 			</ul>
 			<div class="box">
 				<input type="search" placeholder="search"/>
@@ -32,19 +32,18 @@
 		<section id="recent-adventures">
 			<h2 class="adventure-heading">Recent Adventures</h2>
 			<div class="box thumbnails">
-				<div class="article-thumbnail"></div>
-				<div class="article-thumbnail"></div>
-				<div class="article-thumbnail"></div>
+				<div class="article-thumbnail clickable"></div>
+				<div class="article-thumbnail clickable"></div>
+				<div class="article-thumbnail clickable"></div>
 			</div>
 		</section>
 		<section id="popular-adventures">
 			<h2 class="adventure-heading">Popular Adventures</h2>
 			<div class="box thumbnails">
-				<div class="article-thumbnail"></div>
-				<div class="article-thumbnail"></div>
-				<div class="article-thumbnail"></div>
-				<div class="article-thumbnail"></div>
-
+				<div class="article-thumbnail clickable"></div>
+				<div class="article-thumbnail clickable"></div>
+				<div class="article-thumbnail clickable"></div>
+				<div class="article-thumbnail clickable"></div>
 			</div>
 		</section>
     </div>
