Formatted media queries for nav bar mobile view

--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
 	<nav>
 		<div class="box nav-box">
 			<ul class="box">
-				<li class="tab-one clickable"><a href=''>Home</a></li>
-				<li class="tab-two clickable"><a href=''>Recipes</a></li>
-				<li class="tab-three clickable"><a href=''>Reviews</a></li>
+				<li class="tab tab-one clickable"><a href=''>Home</a></li>
+				<li class="tab tab-two clickable"><a href=''>Recipes</a></li>
+				<li class="tab tab-three clickable"><a href=''>Reviews</a></li>
 			</ul>
 			<div class="box">
 				<input type="search" placeholder="search"/>
