Added scale-down to article image

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 			.blog-post img {
 				height: 100px;
 				width: 100px;
-				
+				object-fit: scale-down;
 			}
 			nav ul {
 				flex-direction: column;
