Updated adventure images and thumbnail styles

--- a/index.html
+++ b/index.html
@@ -63,18 +63,18 @@
 		<section id="recent-adventures">
 			<h2 class="adventure-heading">Recent Adventures</h2>
 			<div class="box thumbnails">
-				<div class="article-thumbnail clickable"></div>
-				<div class="article-thumbnail clickable"></div>
-				<div class="article-thumbnail clickable"></div>
+				<img src="https://imgur.com/TB0t9Rg" class="article-thumbnail clickable"/>
+				<img src="https://imgur.com/hCwwemx" class="article-thumbnail clickable"/>
+				<img src="https://imgur.com/Zt2R4Ou" class="article-thumbnail clickable"/>
 			</div>
 		</section>
 		<section id="popular-adventures">
 			<h2 class="adventure-heading">Popular Adventures</h2>
 			<div class="box thumbnails">
-				<div class="article-thumbnail clickable"></div>
-				<div class="article-thumbnail clickable"></div>
-				<div class="article-thumbnail clickable"></div>
-				<div class="article-thumbnail clickable"></div>
+				<img src="https://imgur.com/tJyC0el" class="article-thumbnail clickable"/>
+				<img src="https://imgur.com/QlwK3vl" class="article-thumbnail clickable"/>
+				<img src="https://imgur.com/t0AuImc" class="article-thumbnail clickable"/>
+				<img src="https://imgur.com/ot8D7hn" class="article-thumbnail clickable"/>
 			</div>
 		</section>
     </div>
