Updated fonts, added horizontal rules between sections and styled thumbnail divs

--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
 	
 	<link rel="stylesheet" href="style.css">
 
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Kufam:wght@600&family=Permanent+Marker&display=swap" rel="stylesheet"> 
+
 	<style>
 		@media screen and (max-width: 1080px) {
 			.thumbnails {
@@ -35,6 +39,7 @@
 				flex-direction: column;
 			}
 		}
+
 	</style>
 
 </head>
@@ -60,6 +65,9 @@
 
 		<h1>ADVENTURES IN FOOD</h1>
 		<section id="newest-article" class="box-vertical"></section>
+
+		<hr>
+
 		<section id="recent-adventures">
 			<h2 class="adventure-heading">Recent Adventures</h2>
 			<div class="box thumbnails">
@@ -74,6 +82,9 @@
 				</div>
 			</div>
 		</section>
+
+		<hr>
+
 		<section id="popular-adventures">
 			<h2 class="adventure-heading">Popular Adventures</h2>
 			<div class="box thumbnails">
