--- a/index.html
+++ b/index.html
@@ -73,12 +73,15 @@
 			<div class="box thumbnails">
 				<div class="clickable clickable-div not-clicked">
 					<img src="https://i.imgur.com/TB0t9Rg.jpg" class="article-thumbnail"/>
+					<h3 class="thumbnail-heading">Tut's Egyptian Street Food</h3>
 				</div>
 				<div class="clickable clickable-div not-clicked">
 					<img src="https://i.imgur.com/hCwwemx.jpg" class="article-thumbnail"/>
+					<h3 class="thumbnail-heading">Dan Dan Mian</h3>
 				</div>
 				<div class="clickable clickable-div not-clicked">
 					<img src="https://i.imgur.com/Zt2R4Ou.jpg" class="article-thumbnail"/>
+					<h3 class="thumbnail-heading">The Daily Dumpling Wonton Co</h3>
 				</div>
 			</div>
 		</section>
@@ -90,15 +93,19 @@
 			<div class="box thumbnails">
 				<div class="clickable clickable-div not-clicked">
 					<img src="https://i.imgur.com/tJyC0el.jpg" class="article-thumbnail"/>
+					<h3 class="thumbnail-heading">Reuben Spirals</h3>
 				</div>
 				<div class="clickable clickable-div not-clicked">
 					<img src="https://i.imgur.com/QlwK3vl.jpg" class="article-thumbnail"/>
+					<h3 class="thumbnail-heading">Mongolian Crispy Beef</h3>
 				</div>
 				<div class="clickable clickable-div not-clicked">
 					<img src="https://i.imgur.com/t0AuImc.jpg" class="article-thumbnail"/>
+					<h3 class="thumbnail-heading">Momo's in Parkdale</h3>
 				</div>
 				<div class="clickable clickable-div not-clicked">
 					<img src="https://i.imgur.com/ot8D7hn.jpg" class="article-thumbnail"/>
+					<h3 class="thumbnail-heading">Jacob's Pickle</h3>
 				</div>
 				
 				
