Widened nav bar tabs, added margin to search input to allow spacing above in mobile format; Re-designed adventure thumbnails to look like polaroid photos on corkboards; added sub title 'A Foodie's Blog' to page

--- a/index.html
+++ b/index.html
@@ -71,6 +71,7 @@
         
 
 		<h1>ADVENTURES IN FOOD</h1>
+		<div class="sub-heading">A Foodie's Blog</div>
 		<section id="newest-article" class="box-vertical"></section>
 
 		<hr>
